<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />

    <item
        android:id="@+id/messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>